# shequencer

./: .gitignore  CMakeLists.txt  increment_build.sh  package_mac.sh
Source/: BuildVersion.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
